# geophys_utils

./: .dockerignore  .gitignore  .project  CITATION.cff  Dockerfile  LICENSE  README.md  build_all_images.sh  environment.yml  pyproject.toml  requirements.txt  setup.py
data/: dataset_metadata_cache.sqlite
docker/: Dockerfile_0.1.0_gdal3.5.3_py3.9.16_alpine3.15  Dockerfile_0.1.0_gdal3.5.3_py3.9.16_alpine3.15_normal  Dockerfile_0.1.0_gdal3.5.3_py3.9_alpine3.15_normal  Dockerfile_0.1.0_gdal3.6.4_py3.10.11_alpine3.16  Dockerfile_0.1.0_gdal3.6.4_py3.10.11_alpine3.16_normal  Dockerfile_0.1.0_gdal3.6.4_py3.10_alpine3.16_normal  Dockerfile_0.1.0_gdal3.7.0_mcpy3.10_ubuntu22.04_full  Dockerfile_0.1.0_gdal3.7.0_py3.10.11_alpine3.16_normal  Dockerfile_0.1.0_gdal3.7.0_py3.10.6_ubuntu22.04.2_full  Dockerfile_0.1.0_gdal3.7.0_py3.10_alpine3.16_normal  Dockerfile_0.1.0_gdal3.7.0_py3.10_ubuntu22.04.2_full
dynamic_kmls/: __init__.py  _restful_image_cache.py  _restful_kml_query.py  all_geophysics_datasets.kml  all_geophysics_datasets_from_remote_server.kml  apache_conf.txt  app.py  app.wsgi  cache_everything.py  dynamic_grav_surveys.kml  dynamic_grid_test.kml  dynamic_kml_settings.yml  dynamic_magnetic_survey_grids.kml  dynamic_radiometric_survey_grids.kml  kml_network_link_test.kml  netcdf2kml.py  netcdf2kml_settings.yml
examples/: 10_gravity_point_discovery_and_access_demo.ipynb  1_CSW_data_discovery.ipynb  2_geophys_netcdf_grid_utils_demo.ipynb  3_geophys_netcdf_line_utils_demo.ipynb  4_geophys_data_fusion_demo.ipynb  5_aem_test.ipynb  5a_aem_test-EFTF.ipynb  6_aem_test_multiline.ipynb  7_aem_test_3d_voxel.ipynb  7_aem_test_3d_voxel_netCDF_output.ipynb  8_line_dataset_discovery_and_use_demo.ipynb  9_gravity_point_dataset.ipynb  9_gravity_point_dataset.py  9a_line_dataset_plot.ipynb  9b_line_dataset_plot_line_elevations.ipynb  CSW Request.xml  CSW Response.xml  NCSS_Demo.ipynb  aem_netcdf_test.ipynb  dynamic_point_gridding_utils.py  fetch_points_demo.ipynb  geophys_netcdf_grid_utils_demo.ipynb  geophys_netcdf_line_utils_demo.ipynb  geophys_point_fetcher.py  geophysics_line_nc_metadata.csv  get_nearest_points_demo.ipynb  get_netcdf_util_demo.py  gravity_point_metadata.csv  line_data_demo.py  nearest_geophys_point_finder.py  netcdf_grid_utils_shape_test.ipynb  new_9_gravity_point_dataset.ipynb  plot_point_dataset.py  plot_prediction_flags.py  point_gravity_access.ipynb  point_gravity_plotting.ipynb  test_build_concave_hulls_for_grids.py  tile_gridder.py
examples/.ipynb_checkpoints/: 1_CSW_data_discovery-checkpoint.ipynb  2_geophys_netcdf_grid_utils_demo-checkpoint.ipynb  3_geophys_netcdf_line_utils_demo-checkpoint.ipynb  7_aem_test_3d_voxel-checkpoint.ipynb  7_aem_test_3d_voxel_netCDF_output-checkpoint.ipynb
examples/dynamic_kmls/: app.py
geophys_utils/: __init__.py  _array2file.py  _array_pieces.py  _blrb.py  _concave_hull.py  _crs_utils.py  _csw_utils.py  _data_stats.py  _datetime_utils.py  _dem_utils.py  _gdal_grid_utils.py  _get_netcdf_util.py  _netcdf_grid_utils.py  _netcdf_line_utils.py  _netcdf_point_utils.py  _netcdf_utils.py  _polygon_utils.py  _transect_utils.py  _vincenty.py  csw_find.py  csw_utils_settings.yml  nc2aseg.py  rechunk.py
geophys_utils/dataset_metadata_cache/: __init__.py  _dataset_metadata_cache.py  _postgres_dataset_metadata_cache.py  _sqlite_dataset_metadata_cache.py  dataset_search_demo.py  (+6 more)
(+38 files in other folders)
