[project]
name = "geophys_utils"
version = "0.1.0"
authors = [
    { name = "Alex Ip", email = "alex@trentham.net.au" },
    { name = "Andrew Turner", email = "andrew.turner@ga.gov.au" },
]
maintainers = [
    { name = "Geoscience Australia", email = "clientservices@ga.gov.au" },
]
description = "Geophysics data access utilities"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy==1.24.2",
    "netCDF4==1.6.2",
    "gdal==3.6.2",
    "affine==2.3.0",
    "cartopy==0.21.1",
    "matplotlib==3.6.2",
    "numexpr==2.8.4",
    "owslib==0.29.2",
    "pyyaml==6.0",
    "requests==2.28.1",
    "scikit-image==0.19.3",
    "scipy==1.10.0",
    "shapely==1.8.4",
    "unidecode==1.2.0",
    "zipstream-new==1.1.8",
]
[project.urls]
"Homepage" = "https://github.com/geoscienceaustralia/geophys_utils"
"Bug Tracker" = "https://github.com/geoscienceaustralia/geophys_utils/issues"
[tool.setuptools]
py-modules = [
    'geophys_utils',
]
