[project]
name = "geophys_utils"
version = "0.1.0"
authors = [
  { name="Alex Ip", email="alex@trentham.net.au" },
  { name="Andrew Turner", email="andrew.turner@ga.gov.au" },
]
maintainers = [
  { name="Geoscience Australia", email="clientservices@ga.gov.au" },
]
description = "Geophysics data access utilities"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "netCDF4",
    "gdal",
    "affine",
    "cartopy",
    "matplotlib",
    "numexpr",
    "owslib",
    "pyyaml",
    "requests",
    "scikit-image",
    "scipy",
    "shapely",
    "unidecode",
    "zipstream-new",
]
[project.urls]
"Homepage" = "https://github.com/geoscienceaustralia/geophys_utils"
"Bug Tracker" = "https://github.com/geoscienceaustralia/geophys_utils/issues"
[tool.setuptools]
py-modules = [
    'geophys_utils',
]
