[project]
name = "geophys_utils"
version = "0.1.0"
authors = [
  { name="Alex Ip", email="alex@trentham.net.au" },
  { name="Andrew Turner", email="andrew.turner@ga.gov.au" },
]
maintainers = [
  { name="Geoscience Australia", email="clientservices@ga.gov.au" },
]
description = "Geophysics data access utilities"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy==1.24.3",
    "netCDF4==1.6.4",
    "gdal==3.6.2",
    "affine==2.3.0",
    "cartopy==0.18.0",
    "matplotlib==3.7.1",
    "numexpr==2.8.4",
    "owslib==0.24.1",
    "pyyaml==6.0",
    "requests==2.31.0",
    "scikit-image==0.19.3",
    "scipy==1.10.1",
    "shapely==2.0.1",
    "unidecode==1.3.6",
    "zipstream-new==1.1.8",
]
[project.urls]
"Homepage" = "https://github.com/geoscienceaustralia/geophys_utils"
"Bug Tracker" = "https://github.com/geoscienceaustralia/geophys_utils/issues"
[tool.setuptools]
py-modules = [
    'geophys_utils',
]
